feat: add Slot & SlotRepository
feat: add SalonServiceDataRepository
feat: add SalonException
fix: use java8 in sdkmanrc

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-salon.name=AR Salon and Day Spa Services
-salon.address=1234 Main Street, Anytown
-salon.city=Grand Forks
-salon.state=ND
-salon.zipcode=58201
-salon.phone=555-123-4567
+spring.jpa.show-sql=true
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+salonapi.name=AR Salon and Day Spa Services
+salonapi.address=1234 Main Street, Anytown
+salonapi.city=Grand Forks
+salonapi.state=ND
+salonapi.zipcode=58201
+salonapi.phone=555-123-4567
