--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-salonapi.name=AR Salon and Day Spa Services
-salonapi.address=1234 Main Street, Anytown
-salonapi.city=Grand Forks
-salonapi.state=ND
-salonapi.zipcode=58201
-salonapi.phone=555-123-4567
+application.salon.name=AR Salon and Day Spa Services
+application.salon.address=1234 Main Street, Anytown
+application.salon.city=Grand Forks
+application.salon.state=ND
+application.salon.zipcode=58201
+application.salon.phone=555-123-4567
