--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.port=8000
 spring.jpa.show-sql=true
-spring.datasource.username=postgres
-spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/salon
 application.salon.name=AR Salon and Day Spa Services
 application.salon.address=1234 Main Street, Anytown
 application.salon.city=Grand Forks
